<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/messageCardView"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:id="@+id/messageIdTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/message_id"
      android:textAlignment="textEnd"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/messageIdTextView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:textAlignment="viewStart"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/messageIdTitle"
      app:layout_constraintTop_toTopOf="@+id/messageIdTitle" />

    <TextView
      android:id="@+id/userId"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:text="@string/user_id"
      android:textAlignment="textEnd"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="@+id/messageIdTitle"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/messageIdTitle" />

    <TextView
      android:id="@+id/userIdTextView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:textAlignment="viewStart"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="@+id/messageIdTextView"
      app:layout_constraintStart_toStartOf="@+id/messageIdTextView"
      app:layout_constraintTop_toTopOf="@+id/userId" />


    <TextView
      android:id="@+id/titleLabel"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/title"
      android:textAlignment="textEnd"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="@+id/userId"
      app:layout_constraintStart_toStartOf="@+id/userId"
      app:layout_constraintTop_toBottomOf="@+id/userId" />

    <TextView
      android:id="@+id/titleTextView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:ellipsize="end"
      android:textAlignment="viewStart"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="@+id/userIdTextView"
      app:layout_constraintStart_toStartOf="@+id/userIdTextView"
      app:layout_constraintTop_toTopOf="@+id/titleLabel" />


    <TextView
      android:id="@+id/bodyLabel"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/title"
      android:textAlignment="textEnd"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="@+id/titleLabel"
      app:layout_constraintStart_toStartOf="@+id/titleLabel"
      app:layout_constraintTop_toBottomOf="@+id/titleLabel" />

    <TextView
      android:id="@+id/bodyTextView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:textAlignment="viewStart"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="@+id/titleTextView"
      app:layout_constraintStart_toStartOf="@+id/titleTextView"
      app:layout_constraintTop_toTopOf="@+id/bodyLabel" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>